added rough version of like button, like is by position

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 
 <body>
 
+
+
+  <button id="like-button">❤️ Front Like</button>
+  <span id="like-count">0</span>likes
+
+  <button id="like-button2">❤️ Back Like</button>
+  <span id="like-count2">0</span>likes
+
   <h1>Harry Potter Characters</h1>
   <div id="searchWrapper">
     <input type="text" name="searchBar" id="searchBar" placeholder="search for a character" />
@@ -21,10 +29,10 @@
   <ul id="charactersList"></ul>
   </div>
 
-
   <div id="sort" class=""></div>
   <div id="search" class=""></div>
 
+  <div id="like-test" class="display"></div>
   <div id="display" class="display"></div>
   <!-- <div id="map" class=""></div>
     <div id="switch" class=""></div>
@@ -34,9 +42,9 @@
     <div id="filter1" class=""></div>
     <div id="filter2" class=""></div> -->
 
-  <button id="commonBtn">Common</button>
+  <!-- <button id="commonBtn">Common</button>
   <button id="rareBtn">Rare</button>
-  <button id="clearBtn">Clear</button>
+  <button id="clearBtn">Clear</button> -->
 
   <!-- <button id="common">Common</button>
     <button id="rare">Rare</button>
