js code clean up, trying now to callback render to avoid duplicate render code

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Test</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://use.typekit.net/wco5sjn.css">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="style.css" rel="stylesheet" />
 
 </head>
@@ -15,25 +15,56 @@
 <body>
 
 
+  <div id="cards-container">
+  </div>
+  <div id="display" class="display"></div>
 
-  <button id="like-button">❤️ Front Like</button>
+
+  <!-- <div id="display" class="display"></div>
+
+
+  <div id="searchWrapper">
+    <input type="text" name="searchBar" id="searchBar" placeholder="search for a character" />
+  </div>
+  <ul id="charactersList"></ul>
+  </div> -->
+
+  <!-- 
+  <div class="container">
+  </div>
+
+
+  <h1>Cookie Run Kingdom</h1>
+
+  <button id="like-button"><i class="fa fa-heart-o"></i> Front Like</button>
   <span id="like-count">0</span>likes
 
-  <button id="like-button2">❤️ Back Like</button>
+  <button id="like-button2" class="likeBtn"><i class="fa fa-heart-o"></i> Back Like</button>
   <span id="like-count2">0</span>likes
 
-  <h1>Harry Potter Characters</h1>
   <div id="searchWrapper">
     <input type="text" name="searchBar" id="searchBar" placeholder="search for a character" />
   </div>
   <ul id="charactersList"></ul>
   </div>
 
-  <div id="sort" class=""></div>
-  <div id="search" class=""></div>
 
-  <div id="like-test" class="display"></div>
+  <div id="cards-container">
+  </div>
+
+
+
+
+
+
   <div id="display" class="display"></div>
+ -->
+
+
+  <!-- <div id="sort" class=""></div>
+  <div id="search" class=""></div> -->
+
+  <!-- <div id="like-test" class="display"></div> -->
   <!-- <div id="map" class=""></div>
     <div id="switch" class=""></div>
     <div id="sort" class=""></div>
