reverted back to map render in each feature

--- a/index.html
+++ b/index.html
@@ -13,33 +13,12 @@
 </head>
 
 <body>
-
-
-  <div id="cards-container">
-  </div>
-  <div id="display" class="display"></div>
-
-
-  <!-- <div id="display" class="display"></div>
-
-
-  <div id="searchWrapper">
-    <input type="text" name="searchBar" id="searchBar" placeholder="search for a character" />
-  </div>
-  <ul id="charactersList"></ul>
-  </div> -->
-
-  <!-- 
-  <div class="container">
-  </div>
-
-
   <h1>Cookie Run Kingdom</h1>
 
-  <button id="like-button"><i class="fa fa-heart-o"></i> Front Like</button>
+  <button id="like-button">❤️ Front Like</button>
   <span id="like-count">0</span>likes
 
-  <button id="like-button2" class="likeBtn"><i class="fa fa-heart-o"></i> Back Like</button>
+  <button id="like-button2">❤️ Rear Like</button>
   <span id="like-count2">0</span>likes
 
   <div id="searchWrapper">
@@ -48,44 +27,11 @@
   <ul id="charactersList"></ul>
   </div>
 
-
-  <div id="cards-container">
-  </div>
-
-
-
-
-
+  <div id="cards-container" class=""></div>
+  <div id="search" class=""></div>
 
   <div id="display" class="display"></div>
- -->
-
-
-  <!-- <div id="sort" class=""></div>
-  <div id="search" class=""></div> -->
-
-  <!-- <div id="like-test" class="display"></div> -->
-  <!-- <div id="map" class=""></div>
-    <div id="switch" class=""></div>
-    <div id="sort" class=""></div>
-    <div id="includes" class=""></div>
-    <div id="filter" class=""></div>
-    <div id="filter1" class=""></div>
-    <div id="filter2" class=""></div> -->
-
-  <!-- <button id="commonBtn">Common</button>
-  <button id="rareBtn">Rare</button>
-  <button id="clearBtn">Clear</button> -->
-
-  <!-- <button id="common">Common</button>
-    <button id="rare">Rare</button>
-    <button id="epic">Epic</button>
-    <button id="super">Super Epic</button>
-    <button id="legendary">Legendary</button>
-    <button id="ancient">Ancient</button>
-    <div id="data-list" class="data-list"></div> -->
-
-
   </div>
+
   <script type="text/javascript" src="script.js"></script>
 </body>
