added flex, responsive css to cookie cards

--- a/index.html
+++ b/index.html
@@ -15,20 +15,23 @@
 <body>
   <h1>Cookie Run Kingdom</h1>
 
-  <button id="like-button">❤️ Front Like</button>
-  <span id="like-count">0</span>likes
+  <div>
+    <button id="like-button" class="likeBtn">Front Like <i class="fa fa-heart-o"> </i> <span
+        id="like-count">0</span></button>
 
-  <button id="like-button2">❤️ Rear Like</button>
-  <span id="like-count2">0</span>likes
+
+    <button id="like-button2" class="likeBtn">Rear Like <i class="fa fa-heart-o"></i> <span
+        id="like-count2">0</span></button>
+  </div>
 
   <div id="searchWrapper">
     <input type="text" name="searchBar" id="searchBar" placeholder="search for a character" />
   </div>
-  <ul id="charactersList"></ul>
+  <!-- <ul id="charactersList"></ul> -->
   </div>
 
+  <!-- <div id="search" class=""></div> -->
   <div id="cards-container" class=""></div>
-  <div id="search" class=""></div>
 
   <div id="display" class="display"></div>
   </div>
