adjusted a few html elements, add additional cookies to json db

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 <body>
   <h1>Cookie Run Kingdom</h1>
 
+
+  <div id="containerCheckbox"></div>
+
+
   <div>
     <button id="like-button" class="likeBtn">Front Like <i class="fa fa-heart-o"> </i> <span
         id="like-count">0</span></button>
