--- a/index.html
+++ b/index.html
@@ -15,31 +15,26 @@
 <body>
   <h1>Cookie Run Kingdom</h1>
 
-
   <div id="containerCheckbox"></div>
-  <div id="demo"></div>
-
 
   <div>
-    <button id="like-button" class="likeBtn">Front Like <i class="fa fa-heart-o"> </i> <span
-        id="like-count">0</span></button>
+    <button id="likeButtonFront" class="likeBtn">Front Like <i class="fa fa-heart-o"> </i> <span
+        id="likeCountFront">0</span></button>
 
+    <button id="likeButtonMiddle" class="likeBtn">Middle Like <i class="fa fa-heart-o"></i> <span
+        id="likeCountMiddle">0</span></button>
 
-    <button id="like-button2" class="likeBtn">Rear Like <i class="fa fa-heart-o"></i> <span
-        id="like-count2">0</span></button>
+    <button id="likeButtonRear" class="likeBtn">Rear Like <i class="fa fa-heart-o"></i> <span
+        id="likeCountRear">0</span></button>
   </div>
 
   <div id="searchWrapper">
     <input type="text" name="searchBar" id="searchBar" placeholder="search for a character" />
   </div>
-  <!-- <ul id="charactersList"></ul> -->
-  </div>
 
-  <!-- <div id="search" class=""></div> -->
   <div id="cards-container" class=""></div>
 
   <div id="display" class="display"></div>
-  </div>
 
   <script type="text/javascript" src="script.js"></script>
 </body>
